# neural_model_for_noise_testing

./: .gitignore  API_DOCUMENTATION.md  BRAIN_MODEL_GUIDE.md  Cargo.toml  PROJECT_REVIEW.md  README.md  RELAX_MEDITATION_TODO.md  SCIENTIFIC_AUDIT_TASKS.md  blogpost_draft.md  colored-noise-recipes.md  paper_findings.md  preset_focus_20260324_132444.json  preset_focus_20260429_080736.json  preset_focus_20260429_105018.json  preset_instruction.md  preset_shield_20260412_185621.json  preset_sleep_20260412_054445.json  preset_sleep_20260412_092009.json  preset_sleep_20260412_092041.json  preset_sleep_20260412_185637.json  preset_sleep_20260429_080736.json  shield_training_evals.csv  update_model.md
presets/: adhd_dopaminergic_agressive_v13.json  adhd_dopaminergic_v8.json  adhd_optimized_v9.json  alpha_sync_pendulum_v12.json  balanced_theta_smr.json  deep_focus_beta_gamma.json  deep_relax_phys_cet_v1.json  deep_work_optimized_v6.json  deepwork_adhd.json  deepwork_adhd_v2.json  deepwork_normal.json  deepwork_normal_v2.json  hybrid_theta_gamma_v5.json  ios_black_focus.json  ios_brown_focus.json  ios_brown_orbit_sleep.json  ios_green_focus.json  ios_grey_focus.json  ios_pink_focus.json  ios_ssn_focus.json  ios_white_focus.json  isolation_adhd_clean.json  isolation_adhd_smooth.json  isolation_normal_clean.json  isolation_normal_smooth.json  meditation_adhd_v2.json  meditation_normal.json  meditation_normal_v2.json  monolith_nt.json  monolith_nt_v2.json  monolith_nt_v2_clean.json  neural_focus_breathing.json  normal_set_deep_relax.json  normal_set_drift.json  normal_set_flow.json  (+46 more)
(+29 files in other folders)
