[package]
name = "neural_preset_optimizer"
version = "0.1.0"
edition = "2021"
description = "Neural model-based optimizer for noise generator presets"

[dependencies]
noice_generator_core = { path = "../noice_generator/crates/core", default-features = false }

rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rustfft = "6"
chrono = "0.4"
